--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
   </style>
+  <link rel="icon" href="BramsLF.ico">
   <title>To-Dos App</title>
 </head>
 
